<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:background="@drawable/myinfo">
    
     <TextView
       android:id="@+id/title_change_info"
       android:layout_width="fill_parent"
       android:gravity="center_vertical"
       android:layout_height="wrap_content"
       android:text="@string/title_change_info"
       android:layout_marginTop="20dp"
       android:layout_marginBottom="40dp"
       android:paddingLeft="100dp"
       android:textColor="#000000"
       android:textSize="20sp"
       android:textStyle="bold"/>
    
    
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
       <TextView
           android:layout_weight="1"
           android:gravity="bottom"
       android:layout_width="0dp"
       android:paddingLeft="20dp"
       android:layout_height="wrap_content"
       android:text="@string/new_user_number"/>
       
       <EditText 
           android:id="@+id/my_number"
           android:inputType="number"
           android:layout_width="0dp"
           android:layout_weight="3"
           android:layout_height="wrap_content"></EditText>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
       <TextView
           android:layout_weight="1"
           android:gravity="bottom"
           android:paddingLeft="20dp"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:text="@string/new_user_name"/>
       
       <EditText 
           android:id="@+id/my_name"
           android:inputType="text"
           android:layout_width="0dp"
             android:layout_weight="3"
           android:layout_height="wrap_content"></EditText>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
       <TextView
           android:layout_weight="1"
           android:gravity="bottom"
           android:paddingLeft="20dp"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:text="@string/new_user_password"/>
       
       <EditText 
           android:id="@+id/my_password"
           android:inputType="numberPassword"
           android:layout_width="0dp"
             android:layout_weight="3"
           android:layout_height="wrap_content"></EditText>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
       <TextView
           android:layout_weight="1"
           android:gravity="bottom"
           android:paddingLeft="20dp"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:text="@string/new_user_college"/>
       
       <EditText 
           android:id="@+id/my_college"
           android:inputType="text"
           android:layout_width="0dp"
             android:layout_weight="3"
           android:layout_height="wrap_content"></EditText>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
       <TextView
           android:layout_weight="1"
           android:gravity="bottom"
           android:paddingLeft="20dp"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:text="@string/new_user_age"/>
       
       <EditText 
           android:id="@+id/my_age"
           android:inputType="text"
           android:layout_width="0dp"
             android:layout_weight="3"
           android:layout_height="wrap_content"></EditText>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
       <TextView
           android:layout_weight="1"
           android:gravity="bottom"
           android:paddingLeft="20dp"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:text="@string/new_user_sex"/>
       
       <EditText 
           android:id="@+id/my_sex"
           android:inputType="text"
           android:layout_width="0dp"
             android:layout_weight="3"
           android:layout_height="wrap_content"></EditText>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
       <TextView
           android:layout_weight="1"
           android:gravity="bottom"
           android:paddingLeft="20dp"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:text="@string/new_user_address"/>
       
       <EditText 
           android:id="@+id/my_address"
           android:inputType="text"
           android:layout_width="0dp"
             android:layout_weight="3"
           android:layout_height="wrap_content"></EditText>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
     android:layout_marginBottom="20dp"
    android:orientation="horizontal">
       <TextView
           android:layout_weight="1"
           android:gravity="bottom"
           android:paddingLeft="20dp"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:text="@string/new_user_phone"/>
       
       <EditText 
           android:id="@+id/my_phone"
           android:inputType="phone"
           android:layout_width="0dp"
             android:layout_weight="3"
           android:layout_height="wrap_content"></EditText>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">  
            <Button
                android:id="@+id/btn_change_submit"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#000000" 
                android:text="@string/btn_change_submit"
                style="@android:style/MediaButton"/>
            
            <Button
                 android:id="@+id/btn_change_cancel"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/new_user_exit"
                
                style="@android:style/MediaButton.Previous"/>
</LinearLayout>

</LinearLayout>

