<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/select">
    
  
           <TextView 
                android:id="@+id/fuction_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fuction_select"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="60dp"
                android:textSize="20sp"
                android:textStyle="bold"></TextView>
           <LinearLayout 
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/select_item"
               android:layout_marginBottom="20dp"
               android:layout_below="@+id/fuction_select"
               android:layout_centerVertical="true"
               android:orientation="vertical">
              
               
              
           <Button
                android:id="@+id/my_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/my_info"
                style="@android:style/MediaButton"/>
            <Button
                android:id="@+id/app_using_status"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/app_using_status"
                style="@android:style/MediaButton"/>
             <Button
                android:id="@+id/btn_userdistrict"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="老乡分布"
                style="@android:style/MediaButton"/>
            <Button
                android:id="@+id/school_map"
                android:layout_width="fill_parent"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content"
                android:text="@string/school_map"
                style="@android:style/MediaButton"/>

            </LinearLayout>
            <Button
                android:id="@+id/exit_app"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/select_item"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit_app"
                style="@android:style/MediaButton"/>
</RelativeLayout>
