<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/register"
        android:fillViewport="true" 
         android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/new_user_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:paddingLeft="100dp"
                android:text="@string/new_user_register"
                android:textColor="#0000ff"
                android:textSize="20sp"
                android:textStyle="bold" />

           

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
				
				<TextView 
				    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="选择用户类型"
				    />
				
                	
                <Spinner
                    android:id="@+id/Spinner_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right" />
          

              
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_mobile_linear"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:paddingLeft="20dp"
                    android:text="@string/new_user_phone" />

                <EditText
                    android:id="@+id/new_user_mobile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="游客联系方式"
                    android:inputType="number" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_number_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
              
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:paddingLeft="20dp"
                    android:text="@string/new_user_number" />

                <EditText
                    android:id="@+id/new_user_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="学号/工号"
                    android:inputType="number" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_name_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:paddingLeft="20dp"
                    android:text="@string/new_user_name" />

                <EditText
                    android:id="@+id/new_user_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/new_user_name"
                    android:inputType="text" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_password_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:paddingLeft="20dp"
                    android:text="@string/new_user_password" />

                <EditText
                    android:id="@+id/new_user_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/new_user_password"
                    android:inputType="number" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_coll_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:paddingLeft="20dp"
                    android:text="@string/new_user_college" />
                <Spinner
                    android:id="@+id/Spinner_coll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_sex_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:paddingLeft="20dp"
                    android:text="@string/new_user_sex" />

                <Spinner
                    android:id="@+id/Spinner_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right" />
                <!-- 添加一个下拉列表 -->

            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_address_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:paddingLeft="20dp"
                    android:text="@string/new_user_address" />

                <EditText
                    android:id="@+id/new_user_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/new_user_address"
					 >
                </EditText>
            </LinearLayout>

         
            <LinearLayout
                android:id="@+id/user_age_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:paddingLeft="20dp"
                    android:text="@string/new_user_age" />

                <EditText
                    android:id="@+id/new_user_age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/new_user_age"
                    android:inputType="number" >
                </EditText>
               
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_phone_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:paddingLeft="20dp"
                    android:text="@string/new_user_phone" />

                <EditText
                    android:id="@+id/new_user_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/new_user_phone"
                    android:inputType="phone" >
                </EditText>
            </LinearLayout>
			   <LinearLayout
                android:id="@+id/ll_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:paddingLeft="20dp"
                    android:text="选择籍贯" />
                <Spinner
                    android:id="@+id/sp_district"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right" />
            </LinearLayout>
            
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >
	              <Button 
	                  android:layout_width="wrap_content"
	                  android:layout_height="wrap_content"
	                  android:text="注册"
	                  android:id="@+id/btn_register"
	                  android:layout_weight="1"
	                   style="@android:style/MediaButton"
	                  />  
	              	    
	              
                	<Button 
	                  android:layout_width="wrap_content"
	                  android:layout_height="wrap_content"
	                  android:text="取消"
	                   style="@android:style/MediaButton"
	                  android:id="@+id/btn_quexiao"
	                  android:layout_weight="1"
	                  />  
                
                
            </LinearLayout>
            
            
        </LinearLayout>
         
        
    </ScrollView>
